--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,12 @@ question: "Prise de Contact"
 markdown: kramdown
 
 # theme: minima
-
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 
+paginate: 5
+paginate_path:    /posts/page:num/
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
