update photo steph

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,7 +1,7 @@
 members:
   - name: "Stéphane Grumbach"
     bio: "Impact politique de la révolution numérique, stratégies de résilience et environnement global"
-    img: /uploads/team/stephane-grumbach.jpg
+    img: /uploads/team/stephane-grumbach.png
     url: "https://who.rocq.inria.fr/Stephane.Grumbach/"
   - name: "Pablo Jensen"
     bio: "..."
