updatew  team page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -4,10 +4,14 @@ members:
     img: /uploads/team/stephane-grumbach.png
     url: "https://who.rocq.inria.fr/Stephane.Grumbach/"
   - name: "Pablo Jensen"
-    bio: "..."
+    bio: "Politique de la modélisation des données sociales. Indicateurs mondiaux de l’état écologique des cours d'eau"
     img: /uploads/team/pablo-jensen.jpg
     url: "http://perso.ens-lyon.fr/pablo.jensen/"
   - name: "Olivier Hamant"
     bio: "Résilience biologique et mécanique chez les plantes. Anthropocène et sous-optimalité du vivant"
     img: /uploads/team/olivier-hamant.jpg
     url: "https://planet-vie.ens.fr/1185/olivier-hamant"
+  - name: "Clément Renaud"
+    bio: "Représentations des espaces géographiques, numériques, et socio-techniques."
+    img: /uploads/team/clement-renaud.jpg
+    url: "https://clementrenaud.com"
