--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,7 +1,7 @@
 members:
   - name: "Stéphane Grumbach"
     bio: "Impact politique de la révolution numérique, stratégies de résilience et environnement global"
-    img: /uploads/team/stephane-grumbach.png
+    img: /uploads/team/stephane-grumbach.jpg
     url: "https://who.rocq.inria.fr/Stephane.Grumbach/"
   - name: "Olivier Hamant"
     bio: "Résilience biologique et mécanique chez les plantes. Anthropocène et sous-optimalité du vivant"
