add mt Charreyre

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,4 +1,7 @@
 members:
+  - name: "Marie-Thérèse Charreyre"
+    bio: "Des nanotechnologies pour l'imagerie et la thérapie anti-cancéreuse, aux enjeux actuels de l'alimentation"
+    img: /uploads/team/mt-charreyre.jpg
   - name: "Stéphane Grumbach"
     bio: "Impact politique de la révolution numérique, stratégies de résilience et environnement global"
     img: /uploads/team/stephane-grumbach.jpg
