--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: clemsos/simple-question.org
+  repo: simple-question/simple-question.org
   branch: master
 
 publish_mode: editorial_workflow
