update questions + admin part

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,5 +17,34 @@ collections:
       - {label: "Titre", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "string"}
       - {label: "Auteur", name: "author", widget: "string"}
-      - {label: "Twitter Card", name: "image", widget: "image"}
+      - {label: "Catégorie", name: "category", widget: "string"}
+      - {label: "Thumbnail", name: "thumbnail", widget: "image"}
       - {label: "Texte", name: "body", widget: "markdown"}
+  - label: "Pages"
+    name: "pages"
+    files:
+      - label: "La Charte"
+        name: "charte"
+        file: "charte.md"
+        fields:
+          - {label: "Titre", name: "title", widget: "string"}
+          - {label: "Texte", name: "body", widget: "markdown"}
+      - label: "Les Questions"
+        name: "questions"
+        file: "_data/questions.yml"
+        fields:
+          - label: "Questions"
+            name: "questions"
+            widget: "list"
+            field: {widget: string}
+      - label: "L'Equipe"
+        name: "people"
+        file: "_data/team.yml"
+        fields:
+          - label: Members
+            name: members
+            widget: list
+            fields:
+              - {label: Name, name: name, widget: string}
+              - {label: Bio, name: bio, widget: string}
+              - {label: Photo, name: image, widget: image}
